syntax = "proto3";
package journal.inner;

service JournalServerInnerService {
    rpc UpdateCache(UpdateJournalCacheRequest) returns(UpdateJournalCacheReply){}
    rpc DeleteSegmentFile(DeleteSegmentFileRequest) returns(DeleteSegmentFileReply){}
    rpc GetSegmentStatus(GetSegmentStatusRequest) returns(GetSegmentStatusReply){}
}

message UpdateJournalCacheRequest{
    string cluster_name = 1;
    JournalUpdateCacheActionType action_type = 2;
    JournalUpdateCacheResourceType resource_type = 3;
    string data =4 ;
}

message UpdateJournalCacheReply{}

message DeleteSegmentFileRequest{

}

message DeleteSegmentFileReply{
    
}

message GetSegmentStatusRequest{

}

message GetSegmentStatusReply{
    
}

enum JournalUpdateCacheActionType{
    Set = 0;
    Delete = 1;
}

enum JournalUpdateCacheResourceType{
    JournalNode = 0;
    Shard = 1;
    Segment = 2;
}